CONCF-1064 | Fix overlapping error CONCF-1084

--- a/front/styles/main/component/_curated-content-editor.scss
+++ b/front/styles/main/component/_curated-content-editor.scss
@@ -197,12 +197,13 @@ $image-photo-icon-size: 32px;
 
 		small {
 			background: linear-gradient(to top, rgba(255, 255, 255 , .7), rgba(255, 255, 255, 0));
-			bottom: 0;
+			bottom: 1px;
+			left: 1px;
 			margin: 0;
 			padding: 14px;
 			position: absolute;
+			right: 1px;
 			text-align: center;
-			width: 100%;
 		}
 	}
 	.photo-icon {
